@@ -277,13 +277,18 @@ int load_checkpoint(char *filename)
 	int xymondresult;
 
 
-	sprintf(statuscmd, "xymondboard color=%s fields=hostname,testname,color", xgetenv("ALERTCOLORS"));
+	sprintf(statuscmd, "xymondboard fields=hostname,testname,color");
 	sres = newsendreturnbuf(1, NULL);
 	xymondresult = sendmessage(statuscmd, NULL, XYMON_TIMEOUT, sres);
 	statusbuf = getsendreturnstr(sres, 1);
 	freesendreturnbuf(sres);
 
 	if ((xymondresult != XYMONSEND_OK) || (statusbuf == NULL) || (*statusbuf == '\0')) {
+		/*
+		 * If no data returned for any hosts, chances are xymond is not fully up.
+		 * To prevent alerts clearing and spuriously re-firing, bail out here. xymonlaunch 
+		 * will restart us soon.
+		 */
 		errprintf("xymond_alert: xymond not available or had empty response; error: %d\n", xymondresult);
 		running = 0;
 		return -1;
