@@ -12,6 +12,10 @@ xymon (4.3.28) stable; urgency=medium
    * Fix for building on OpenSSL 1.1.0 (Thanks, Axel Beckert)
    * Add TLS variant specification to http checks, using newer funcs
      in OpenSSL 1.1.0 (From Henrik)
+   * Fix overflow when skipping >2G pending data in logfetch
+     (Reported by Sergey, a_s_y at sama.ru)
+   * xymond_alert will no longer exit and be relaunched if started
+     while there's no actual alertable condition. (Thanks, Franco G.)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Thu, XX XXX 2016 15:00:00 -0700
 
